# perovskite_utils

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  perovskite_utils.rst
perovskite_utils/: file_read_write.py  file_utils.py  perovskite_generator.py  structure.py  structure_utils.py
tests/: SMBA2PbI4_150.000_150.000.relax.in  comparison_structure.cif  gen_structure.cif  qe_written.relax.in  test_perovskite.py  test_qe.relax.in  test_qe_input.py  test_qe_read_then_write.cif  test_relax_output.cif  test_structure.py
