[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "perovskite_utils"
authors = [
  { name="Henry Ding", email="ding.henry.23@gmail.com" },
]
description = "A utility for generating perovskite structures for first-principles calculations"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
]
dynamic = ["version"]

[tool.setuptools_scm]